--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://sofeae2:sofea123@mernapp.ahktpon.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://sofeae2:sofea123@mernapp.ahktpon.mongodb.net/food-ordering?retryWrites=true&w=majority
 SECRET=ninjadojoshifuyoshimarioluigipeachbowser
